Initial implementation of detectors and simple propagators.

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -6,6 +6,9 @@ list(APPEND SOURCES
   "PyEarth.cpp"
   "PySource.cpp"
   "PyParticle.cpp"
+  "PyDetector.cpp"
+  "PyPropagator.cpp"
+  "PyInteraction.cpp"
   "PyAtmosphere.cpp"
   )
 
