Modified PerfectDetector to cut events outside the volume.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ list(APPEND LIB_SOURCES
   "Propagator.cpp"
   "Interaction.cpp"
   "TauDecayTable.cpp"
+  "PerfectDetector.cpp"
   "NeutrinoYFactor.cpp"
   "SphericalEarth.cpp"
   "OrbitalDetector.cpp"
